--- a/ify-art/src/index.css
+++ b/ify-art/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* ---------  */
+*  Base 
+/* -------- */
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+    @apply bg-zing-900;
+    
+}
